examples/test/testpolicy6810.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6810
  namespace: namespace375
spec:
  podSelector:
    matchLabels:
      key19: value46
      key10: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value20
      podSelector:
        matchLabels:
          key32: value8
          key36: value26
          key34: value22
